fix: Double click actions on mobile

--- a/mikado-app/src/pages/Graph/Plaza.css
+++ b/mikado-app/src/pages/Graph/Plaza.css
@@ -17,6 +17,11 @@ main > main {
   width: 100%;
 }
 
+.react-flow {
+  /* Fix double click to add node */
+  touch-action: manipulation;
+}
+
 .react-flow__node {
   display: flex;
   flex-direction: row;
